2008-09-23  Markus Sauermann <markus@sauermann-consulting.de>  (tiny change)

	* emacs-lisp/emacslisp-mode.el (calculate-lisp-indent): Fix
	indentation problem with keyword symbols when a list starts with
	,@ or spaces.  (Bug#1012)

2008-09-23  Martin Rudalics  <rudalics@gmx.at>

	* textmodes/tex-mode.el (latex-find-indent): Try to handle
	escaped close parens correctly.  (Bug#954)

2008-09-22  Tassilo Horn  <tassilo@member.fsf.org>

	* play/fortune.el (fortune-in-buffer): Fix a bug which forced
	usage of `fortune-file' even though a FILE argument was passed to
	the function.

2008-09-21  Dan Nicolaescu  <dann@ics.uci.edu>

	* startup.el (command-line): Start the server when in daemon mode.
	Remove always true test.

	* frame.el (frame-initialize): Remove spurious setting of
	special-display-function with the default value.

2008-09-20  Vincent Belaïche  <vincent.b.1@hotmail.fr>

	* calc/calc-vec.el (calcFunc-venum): Properly handle intervals.

2008-09-20  Glenn Morris  <rgm@gnu.org>

	* emacs-lisp/lisp-mode.el (lisp-indent-offset):
	Fix custom type.  (Bug#1011)

2008-09-20  David De La Harpe Golden  <david@harpegolden.net>

        * files.el (move-file-to-trash): Avoid recursive trashing if
	rename-file calls delete-file.

2008-09-20  Glenn Morris  <rgm@gnu.org>

	* play/fortune.el: Remove leading `*' from defcustom docs.
	(fortune-program-options): Doc fix.  Allow to be a string again.
	Add :version.
	(fortune-in-buffer): Handle fortune-program-options as a string.
	Don't rely on fortune program accepting options after fortune file.

2008-09-20  Justin Bogner  <mail@justinbogner.com>  (tiny change)

	* play/fortune.el (fortune-program-options): Change to a list.
	(fortune-in-buffer): Use apply.

2008-09-20  Ulrich Mueller  <ulm@kph.uni-mainz.de>

	* emacs-lisp/authors.el: Change encoding of file to utf-8.
	(authors-coding-system): Likewise.

2008-09-20  Ami Fischman  <ami@fischman.org>

	* savehist.el (savehist-save): Handle errors in writing as well as